--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
+  <script src="https://unpkg.com/scrollreveal"></script>
+
 </head>
 <body>
   <div class="container">
@@ -25,7 +27,7 @@
         </div>
         <div class="buttons">
             <input id="urlInput" type="text" placeholder="Enter an Url">
-            <button onclick="generateQRCode()">QR code</button>
+            <button class="button-code" onclick="generateQRCode()">QR code</button>
         </div>
     </div>
 
@@ -37,7 +39,7 @@
         <div id="qrcode"></div>
 
         <div class="buttons-box">
-            <button onclick="downloadQRCode()">Download <img src="assets/Load_circle_duotone.svg" alt=""></button>
+            <button class="btn-1" onclick="downloadQRCode()">Download <img src="assets/Load_circle_duotone.svg" alt=""></button>
             <button onclick="copyToClipboard()">Share <img src="assets/link_alt.svg" alt=""></button>
             <button onclick="location.reload()">New QR Code</button>
         </div>
@@ -45,5 +47,6 @@
   </div>
 
   <script src="script.js"></script>
+  <script src="scrollReveal.js"></script>
 </body>
 </html>
