consertando layout qrcode

--- a/index.html
+++ b/index.html
@@ -35,8 +35,11 @@
         <div class="logo">
             <img src="assets/Logo-small.svg" alt="">
         </div>
-        <div class="circle-bg"></div>
-        <div id="qrcode"></div>
+        
+        <div class="box-for-qr">
+            <div class="circle-bg"></div>
+            <div id="qrcode"></div>
+        </div>
 
         <div class="buttons-box">
             <button class="btn-1" onclick="downloadQRCode()">Download <img src="assets/Load_circle_duotone.svg" alt=""></button>
