Consertando atraso na logo qr

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </div>
 
     <div id="area-code" class="area-code">
-        <div class="logo">
+        <div class="logo-qr">
             <img src="assets/Logo-small.svg" alt="">
         </div>
         
