Botao compartilhar personalizado

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
         <div class="buttons-box">
             <button class="btn-1" onclick="downloadQRCode()">Download <img src="assets/Load_circle_duotone.svg" alt=""></button>
-            <button onclick="copyToClipboard()">Share <img src="assets/link_alt.svg" alt=""></button>
+            <button id="share" onclick="copyToClipboard()">Share <img src="assets/link_alt.svg" alt=""></button>
             <button onclick="location.reload()">New QR Code</button>
         </div>
     </div>
